[package]
name = "cf-worker-rust-wasm-demo"
version = "0.1.0"
authors = ["Alan Kemp <alan@alankemp.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "*"
futures = "0.3.5"
wasm-bindgen = { version = "0.2.67" }
wasm-bindgen-futures = "0.4.17"
js-sys = "*"

cloudflare-workers = { path = "../cloudflare-workers-runtime-api" }

[dependencies.web-sys]
version = "*"
features = [
  'FetchEvent',
  'FormData',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'ResponseInit',
  'Response',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
